<resources>
    <string name="app_name">library</string>
    <string name="SA_name">Хранилище книг</string>
    <string name="SA_label1">Стеллаж</string>
    <string name="SA_label2">Полка</string>
    <string name="SA_imagedesc">replace book</string>
    <string name="SA_nobooks">На полке нет книг</string>
    <string name="SA_nobooks_rack_1">В стеллаже </string>
    <string name="SA_nobooks_rack_2"> нет книг</string>
    <string name="SA_dialog_name_1">Перемещение книги «</string>
    <string name="SA_dialog_name_2">»</string>
    <string name="SA_dialog_subm">Подтвердить</string>
    <string name="SA_dialog_canc">Отменить</string>
    <string name="SA_dialog_truemes_1">Книга «</string>
    <string name="SA_dialog_truemes_2">» перемещена</string>
    <string name="SA_dialog_falsemes_1">Книга «</string>
    <string name="SA_dialog_falsemes_2">» осталась на месте</string>
    <string name="SA_addBookBtn">Добавить книгу сюда</string>
    <string name="SA_noBooksToAdd">Все книги находятся на полках</string>
    <string name="SA_addBookdialod_name">Добавление книги на полку</string>
    <string name="SA_noBooksChosen">Книга не выбрана</string>
    <string name="SA_lastRack">Невозможно удалить единственный стеллаж</string>
    <string name="SA_lastShelf">Невозможно удалить единственную полку в стеллаже: удалите весь стеллаж</string>
    <string name="SA_rackAdded">Стеллаж добавлен</string>
    <string name="SA_rackDeleted">Последний стеллаж удалён</string>
    <string name="SA_shelfAdded">Полка добавлена в стеллаж</string>
    <string name="SA_shelfDeleted">Последняя полка в стеллаже удалена</string>
    <string name="main_menu_title">Домашняя библиотека</string>\
    <string name="main_menu_books_button">Книги</string>
    <string name="main_menu_storage_button">Места хранения</string>
    <string name="main_menu_compilation_button">Подборки</string>
    <string name="books_activity_title">Книги в вашей библиотеке</string>
    <string name="books_activity_add_button">Добавить книгу</string>
    <string name="add_books_title">Добавить книгу</string>
    <string name="ok">ОК</string>
    <string name="cancel">Отмена</string>
    <string name="sort">Сортировать</string>
    <string name="title_book_info">Информация о книге</string>
    <string name="write_review">Написать отзыв</string>
    <string name="delete_book">Удалить книгу</string>
    <string name="choose_rating_lable">Рейтинг:</string>
    <string name="create_review_lable">Отзыв:</string>
    <string name="add_review_button">Добавить</string>
    <string name="compilation_date_label">Подборка за:</string>
    <string name="compilation_rating_label">С рейтингом не меньше:</string>
</resources>